--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.2",
+  "version": "0.0.0-semantically-released",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -15,7 +15,8 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "release": "semantic-release"
   },
   "peerDependencies": {
     "react": ">=16.8"
@@ -58,6 +59,7 @@
     "husky": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "semantic-release": "^17.0.7",
     "tsdx": "^0.13.2",
     "tslib": "^1.12.0",
     "typescript": "^3.9.2"
