--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "src"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=10.18"
   },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "release": "semantic-release"
+    "prepare": "tsdx build"
   },
   "peerDependencies": {
     "react": ">=16.8"
@@ -59,7 +58,6 @@
     "husky": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "semantic-release": "^17.0.7",
     "tsdx": "^0.13.2",
     "tslib": "^1.12.0",
     "typescript": "^3.9.2"
