--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "scroll",
     "MutationObserver"
   ],
+  "release": {
+    "analyzeCommits": "semantic-release-conventional-commits"
+  },
   "module": "dist/use-eventual-scroll.esm.js",
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
@@ -58,6 +61,7 @@
     "husky": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "semantic-release-conventional-commits": "^2.0.1",
     "tsdx": "^0.13.2",
     "tslib": "^1.12.0",
     "typescript": "^3.9.2"
